--- a/views/main.erb
+++ b/views/main.erb
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="page-header" align=center>
-    <h1> Welcome to an OpenShift v3 Demo App! </h1>
+    <h1> Welcome to an OpenShift v3! Ruby Language !!Hello Pawan & Pawan! Happy Stay last 1.5 yrs </h1>
   </div>
 
   <% if ENV["DATABASE_SERVICE_HOST"].nil? && ENV["DATABASE_TEST_SERVICE_HOST"].nil? %>
